--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,2 +1,18 @@
-$FPIES-Lite: #a4d2d8
-$FPIES: #52979F
+$FPIES-lite: #b2e8e3
+$FPIES-med: #91d8d3
+$FPIES: #529e99
+$navy: #003366
+$accent: #F8FF91
+
+@import navbar
+
+body
+	// background-color: $FPIES
+	background: linear-gradient(to bottom right, $FPIES-lite, $FPIES-med, $FPIES)
+	height: 100vh
+	color: $navy
+
+	// linear-gradient(to bottom right, $FPIES, $FPIES-Lite)
+
+header, footer, main 
+	padding-left: 300px
