--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -1,7 +1,7 @@
 <ul id="slide-out" class="side-nav fixed z-depth-0">
 	<li><img class="heartLogo" src="../img/like.svg"></li>
 	<li><h1>Tender Tummies</h1></li>
-	<li><div class="whiteLine"></div></li>
+	<li><div class="navLine"></div></li>
   <li><a href="#!">Triggers</a></li>
   <li><a href="#!">Safes</a></li>
   <li><a href="#!">Trials</a></li>
