--- a/sass/main.sass
+++ b/sass/main.sass
@@ -9,10 +9,15 @@ $accent: #F8FF91
 body
 	// background-color: $FPIES
 	background: linear-gradient(to bottom right, $FPIES-lite, $FPIES-med, $FPIES)
-	height: 100vh
+	min-height: 100vh
 	color: $navy
 
 	// linear-gradient(to bottom right, $FPIES, $FPIES-Lite)
 
 header, footer, main 
 	padding-left: 300px
+
+.topLine
+	background-color: $accent
+	height: 25px
+	width: calc(100vw - 300px)
