--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
   .side-nav h1 {
     margin: 0 0 10px; }
 
-.whiteLine {
+.navLine {
   background-color: #F8FF91;
   height: 25px;
   width: 300px; }
@@ -14,8 +14,13 @@
 
 body {
   background: linear-gradient(to bottom right, #b2e8e3, #91d8d3, #529e99);
-  height: 100vh;
+  min-height: 100vh;
   color: #003366; }
 
 header, footer, main {
   padding-left: 300px; }
+
+.topLine {
+  background-color: #F8FF91;
+  height: 25px;
+  width: calc(100vw - 300px); }
