--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -2,9 +2,11 @@
 	<li><img class="heartLogo" src="../img/like.svg"></li>
 	<li><h1>Tender Tummies</h1></li>
 	<li><div class="navLine"></div></li>
+  <li><a href="#!">Home</a></li>
   <li><a href="#!">Triggers</a></li>
   <li><a href="#!">Safes</a></li>
   <li><a href="#!">Trials</a></li>
   <li><a href="#!">Reactions</a></li>
+  <li><a href="#!">Logout</a></li>
 </ul>
 <!-- <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a> -->
