--- a/sass/_profile.sass
+++ b/sass/_profile.sass
@@ -1,3 +1,23 @@
 .modal-content
 	.row
 		margin: 0
+
+div.data-list-input
+	position: relative
+
+select.data-list-input
+	position: absolute
+	top: 5px
+	left: 0px
+
+#data-list-input
+	position: absolute
+	top: 0px
+	left: 0px
+
+input.data-list-input
+	border-bottom: none
+
+input.data-list-input[type=text]:focus:not([readonly])
+	border-bottom: none
+	box-shadow: 0 0 0
