--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,7 +1,7 @@
 $FPIES-lite: #b2e8e3
 $FPIES-med: #91d8d3
 $FPIES: #529e99
-$navy: #003366
+$text: #003366
 $accent: #F8FF91
 
 @import navbar
@@ -11,7 +11,12 @@ body
 	// background-color: $FPIES
 	background: linear-gradient(to bottom right, $FPIES-lite, $FPIES-med, $FPIES)
 	min-height: 100vh
-	color: $navy
+	color: $text
+
+.footer-copyright
+	position: fixed
+	bottom: 0
+	right: 5px
 
 	// linear-gradient(to bottom right, $FPIES, $FPIES-Lite)
 
