--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -1,12 +1,36 @@
-<ul id="slide-out" class="side-nav fixed z-depth-0">
-	<li><img class="heartLogo" src="../img/like.svg"></li>
-	<li><h1>Tender Tummies</h1></li>
-	<li><div class="navLine"></div></li>
-  <li><a href="#!">Home</a></li>
-  <li><a href="#!">Triggers</a></li>
-  <li><a href="#!">Safes</a></li>
-  <li><a href="#!">Trials</a></li>
-  <li><a href="#!">Reactions</a></li>
-  <li><a href="#!">Logout</a></li>
-</ul>
+<div ng-controller="NavCtrl">
+	<ul id="slide-out" class="side-nav fixed z-depth-0">
+		<li>
+			<img class="heartLogo" src="../img/like.svg">
+		</li>
+		<li>
+			<h2 class="center-align">{{view}}</h2>
+		</li>
+		<li>
+			<div class="navLine"></div>
+		</li>
+	  <li>
+	  	<a class="center-align" href="#!/profile/{{currentChildId}}" ng-show="isChild">
+	  		<h3>{{currentChild}}</h3>
+	  	</a>
+	  </li>
+	  <li>
+	  	<a class="center-align" href="#!/trigger" ng-show="isChild">Triggers</a>
+	  </li>
+	  <li>
+	  	<a class="center-align" href="#!/safe" ng-show="isChild">Safes</a>
+	  </li>
+	  <li>
+	  	<a class="center-align" href="#!/trial" ng-show="isChild">Trials</a>
+	  </li>
+	  <li><a class="center-align" href="#!/rxn" ng-show="isChild">Reactions</a></li>
+	  <br><br>
+	  <li>
+	  	<a class="center-align" href="#!/">Choose Child</a>
+	  </li>
+	  <li>
+	  	<a class="center-align" href="#!">Logout</a>
+	  </li>
+	</ul>	
+</div>
 <!-- <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a> -->
