--- a/partials/chooseChild.html
+++ b/partials/chooseChild.html
@@ -2,6 +2,7 @@
 <a ng-href="#!/profile/{{item.id}}">{{item.name}}</a>
 </div>
 
+<!-- Add Child Modal Trigger -->
 <div class="col m4">
   <a class='waves-effect waves-teal btn-flat' data-target='addChildModal' modal>Add Child</a>
 </div>
@@ -36,21 +37,22 @@
 		    </select>
 			</div>
     </div>
-	  <div class="row">
-		  <div input-field class="col s12 data-list-input">
-		    <select class="data-list-input" ng-model="newChild.gender" material-select watch>
-		      <option value="" disabled></option>
-		      <option value="">Other (please write)</option>
+    <div class="row">
+      <div input-field class="col s12 data-list-input">
+        <select class="data-list-input" ng-model="newChild.gender" material-select watch>
+          <option value="" disabled>Choose your option</option>
+          <option value="other">Other, please specify</option>
           <option value="boy">Boy</option>
           <option value="girl">Girl</option>
-		      <option value="">Prefer Not to Answer</option>
-		    </select>
-		    <label>Gender</label>
-        <div id="data-list-input" class="col s10" input-field>
+          <option value="">Prefer Not to Answer</option>
+        </select>
+        <label>Gender</label>
+        <!-- When I get to MVP, adding genders -->
+        <!-- <div id="data-list-input" class="col s10" input-field>
           <input class="data-list-input" type="text" value="">
-        </div>
-			</div>
-		</div>
+        </div> -->
+      </div>
+    </div>
   </div>
   <div class="modal-footer">
     <a href="#!/" class="modal-action modal-close waves-effect waves-green btn-flat" ng-click="addChild()">Add Child</a>
