--- a/sass/main.sass
+++ b/sass/main.sass
@@ -6,9 +6,9 @@ $accent: #F8FF91
 
 @import navbar
 @import profile
-
+// Overall Styles
 body
-	// background-color: $FPIES
+	background-color: $FPIES-med
 	background: linear-gradient(to bottom right, $FPIES-lite, $FPIES-med, $FPIES)
 	min-height: 100vh
 	color: $text
@@ -18,12 +18,16 @@ body
 	bottom: 0
 	right: 5px
 
-	// linear-gradient(to bottom right, $FPIES, $FPIES-Lite)
-
 header, footer, main 
 	padding-left: 300px
-
+	// Yellow line across the top of the page
 .topLine
 	background-color: $accent
 	height: 25px
 	width: calc(100vw - 300px)
+	// Class to overwrite default text color to what I want.
+.textColor
+	color: $text
+	// Making the modals tall enough for the select options
+.tallModal
+	min-height: 400px
