--- a/partials/safe.html
+++ b/partials/safe.html
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="row">
     <div class="col m4">
-      <a class='waves-effect waves-yellow lighten-4 btn-flat textColor' data-target='addChildModal' modal>Add Safe</a>
+      <a class='waves-effect waves-yellow lighten-4 btn-flat textColor' data-target='addSafeModal' modal>Add Safe</a>
     </div>
     <div class="col m8">
       <div input-field>
@@ -17,7 +17,7 @@
 <!-- Safes list -->
   <div class="row" ng-repeat="item in safeList">
     <div class="col m2">
-      <a class="waves-effect waves-teal btn-flat"  data-target='editChildModal' ng-click="getSafe( item.id )" modal><i class="material-icons">mode_edit</i></a>
+      <a class="waves-effect waves-teal btn-flat"  data-target='editSafeModal' ng-click="getSafe( item.id )" modal><i class="material-icons">mode_edit</i></a>
     </div>
     <div class="col m2">
       <a class="waves-effect waves-teal btn-flat"  data-target='deleteSafeModal' ng-click="getSafe( item.id )" modal><i class="material-icons">delete</i></a>
@@ -30,7 +30,7 @@
 
 
 <!-- Add Safe Modal -->
-<div id="addChildModal" class="modal tallModal">
+<div id="addSafeModal" class="modal tallModal">
   <div class="modal-content">
     <h4>Add Safe</h4>
     <div class="row">
@@ -59,7 +59,7 @@
 
 
 <!-- Edit Safe Modal -->
-<div id="editChildModal" class="modal tallModal">
+<div id="editSafeModal" class="modal tallModal">
   <div class="modal-content">
     <h4>Edit Safe</h4>
     <div class="row">
