--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,10 @@ input.data-list-input[type=text]:focus:not([readonly]) {
   border-bottom: none;
   box-shadow: 0 0 0; }
 
+.rxnEvent {
+  background-color: #b2e8e3;
+  border-radius: 15px; }
+
 body {
   background-color: #91d8d3;
   background: linear-gradient(to bottom right, #b2e8e3, #91d8d3, #529e99);
