--- a/partials/rxnDetail.html
+++ b/partials/rxnDetail.html
@@ -8,35 +8,35 @@
 
   <!-- Rxn Event List -->
 
-  <div ng-repeat="item in rxnEvents" class="row">
-  	<div class="rxnEvent">
-  		<div class="col m4">
-  			<h5>{{item.date}}</h5>
-  		</div>
-  		<div class="col m8">
-  			<div class="row">
-  				<div class="col m4">
-  					{{item.time}}
-  				</div>
-  				<div class="col m4">
-  					Severity: {{item.severity}}
-  				</div>
-  				<div class="col m4">
-  					{{item.type}}
-  				</div>
-  			</div>
-  			<div class="row">
-  				<div class="col m12">
-  					<span ng-repeat="value in item.symptom">{{value}}{{$last ? '' : ', '}}</span>
-  				</div>
-  			</div>
-  			<div class="row">
-  				<div class="col m12">
-  					{{item.description}}
-  				</div>
-  			</div>
-  		</div>
-  	</div>
+  <div ng-repeat="item in rxnEvents" class="row rxnEvent">
+		<div class="col m4">
+			<h5>{{item.date}}</h5>
+		</div>
+		<div class="col m8">
+			<div class="row">
+				<div class="col m3">
+					{{item.time}}
+				</div>
+				<div class="col m3">
+					{{item.type}}
+				</div>
+				<div class="col m6">
+					Severity: {{item.severity}}
+				</div>
+			</div>
+			<div class="row">
+				<div class="col m12">
+					Symptoms:<br>
+					<span ng-repeat="value in item.symptom">{{value}}{{$last ? '' : ', '}}</span>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col m12">
+					Comments:<br>
+					{{item.description}}
+				</div>
+			</div>
+		</div>
   </div>
 	
 <!-- Add Rxn Event Modal (not in a modal yet) -->
