trigger foods and safe foods now listed on profile

--- a/partials/profile.html
+++ b/partials/profile.html
@@ -1,18 +1,26 @@
 <!-- Profile -->
 <div class="container">
 	<div class="row">
-		<div class="col m12">
+		<div class="col m12 center-align">
 			<h2>{{child.name}}</h2>
 		</div>
 	</div>
 	<div class="row">
-		<div class="col m12">
+		<div class="col m12 center-align">
 			<h2>{{child.age}} year old {{child.gender}}</h2>
 		</div>
 	</div>
 	<div class="row">
-		<div class="col m12">
+		<div class="col m12 center-align">
 			<h2>{{child.wtNumber}} {{child.wtUnit}}</h2>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col m6 center-align">
+			<h4>{{numTriggers}} Trigger Foods</h4>
+		</div>
+		<div class="col m6 center-align">
+			<h4>{{numSafes}} Safe Foods</h4>
 		</div>
 	</div>
 
