--- a/partials/rxn.html
+++ b/partials/rxn.html
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="row">
     <div class="col m4">
-      <a class='waves-effect waves-yellow lighten-4 btn-flat textColor' data-target='addRxnModal' modal>Add Reaction Event</a>
+      <a class='waves-effect waves-yellow lighten-4 btn-flat textColor' data-target='addRxnModal' modal>Add Reaction</a>
     </div>
   </div>
 
