--- a/partials/rxnDetail.html
+++ b/partials/rxnDetail.html
@@ -5,7 +5,7 @@
       <a class='waves-effect waves-yellow lighten-4 btn-flat textColor' data-target='addRxnEventModal' modal>Add Reaction Event</a>
     </div>
     <div class="col m4">
-      <a class='waves-effect waves-yellow lighten-4 btn-flat textColor' data-target='endRxnEventModal' modal>End Reaction Event</a>
+      <a class='waves-effect waves-yellow lighten-4 btn-flat textColor' data-target='endRxnEventModal' modal>End Reaction</a>
     </div>
   </div>
 
