--- a/partials/safe.html
+++ b/partials/safe.html
@@ -48,6 +48,7 @@
           <option value="Fruit">Fruit</option>
           <option value="Vegetable">Vegetable</option>
           <option value="Grain">Grain</option>
+          <option value="Oil">Oil</option>
         </select>
       </div>
     </div>
@@ -77,6 +78,7 @@
           <option value="Fruit">Fruit</option>
           <option value="Vegetable">Vegetable</option>
           <option value="Grain">Grain</option>
+          <option value="Oil">Oil</option>
         </select>
       </div>
     </div>
