got rxn detail editing and deleting

--- a/partials/profile.html
+++ b/partials/profile.html
@@ -27,10 +27,10 @@
 <!-- Edit/Delete Child Buttons -->
 	<div class="row">
 		<div class="col m4">
-		  <a class='waves-effect waves-teal btn-flat' data-target='editChildModal' modal><i class="material-icons left">mode_edit</i></a>
+		  <a data-target='editChildModal' modal><i class="small material-icons">mode_edit</i></a>
 		</div>
 		<div class="col m4">
-		  <a class='waves-effect waves-teal btn-flat' data-target='deleteChildModal' modal><i class="material-icons left">delete</i></a>
+		  <a data-target='deleteChildModal' modal><i class="small material-icons">delete</i></a>
 		</div>
 	</div>
 </div>
