--- a/css/main.css
+++ b/css/main.css
@@ -37,7 +37,7 @@ input.data-list-input[type=text]:focus:not([readonly]) {
   border-bottom: none;
   box-shadow: 0 0 0; }
 
-.rxnEvent {
+.event {
   background-color: #b2e8e3;
   border-radius: 15px; }
 
