--- a/partials/rxnDetail.html
+++ b/partials/rxnDetail.html
@@ -24,7 +24,7 @@
 
   <!-- Rxn Event List -->
 
-  <div ng-repeat="item in rxnEvents" class="row rxnEvent">
+  <div ng-repeat="item in rxnEvents" class="row event">
 		<div class="col m4">
 			<div class="row">
 				<div class="col m12">
@@ -142,7 +142,15 @@
 		<div class="row">
 			<div class="rxnDetail">
 				<div class="row">
-					<div class="col m12">
+					<div class="col m6">
+						<label for="inputCreated">Date</label>
+						<input input-date
+					    type="text"
+					    name="created"
+					    id="inputCreated"
+					    ng-model="rxn_event.date"/>
+					</div>
+					<div class="col m6">
 						<div input-field>
 					    <select class="" ng-model="currentEvent.type" material-select watch>
 					      <option>Acute</option>
